--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node dist/server/app.js",
     "dev": "nodemon server/app.ts",
     "test": "mocha -r ts-node/register tests/*.test.ts"
   },
@@ -24,6 +25,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "peer": "^0.5.3",
+    "peerjs": "^1.3.1",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.1"
   }
